--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <h1 style="text-align:center; "color:orange";>PORTFOLIO - Biel Planas Noguer</h1>
+    <h1 style="text-align:center;"color:orange"; >PORTFOLIO - Biel Planas Noguer</h1>
   </head>
   
   <body>   
    <br><br>
     <section>   
-        <h1 style="color:orange;">EJERCICIOS JSFiddle DWEC</h1>    
+        <h1 style="color:orange;">#EJERCICIOS JSFiddle DWEC</h1>    
         <h3>FT-M06-CT1-P1.2: Gestió Documental i estàndards - (HTML / CSS / Un poco de JS)</h3>
         <a href="https://jsfiddle.net/bielplanasCEP/qk9csao8/1/">-> Saludo</a>
       
