--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <h1 style="text-align:center;"color:orange"; >PORTFOLIO - Biel Planas Noguer</h1>
+    <h1 style="text-align:center; >PORTFOLIO - Biel Planas Noguer</h1>
   </head>
   
   <body>   
