--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <h1 style="text-align:center;">PORTFOLIO - Biel Planas Noguer</h1>
+    <h1 style="text-align:center;">PORTFOLIO - BIEL PLANAS NOGUER</h1>
   </head>
   
   <body>   
@@ -9,14 +9,14 @@
     <section>   
         <h1 style="color:orange;"># EJERCICIOS JSFiddle (DWEC)</h1>    
         <h3>FT-M06-CT1-P1.2: Gestió Documental i estàndards - (HTML / CSS / Un poco de JS)</h3>
-        <a href="https://jsfiddle.net/bielplanasCEP/qk9csao8/1/"># Saludo</a>
+        <a href="https://jsfiddle.net/bielplanasCEP/qk9csao8/1/" target="_blank"># Saludo</a>
       
         <h3>FT-M06-CT2-P2.1 (part 1): Estructures per emmagatzemar informació - (Estructures de dades simples/complexes)</h3>
-        <a href="https://jsfiddle.net/bielplanasCEP/axzu9gcq/27/"># Asignar letra a numero</a>
+        <a href="https://jsfiddle.net/bielplanasCEP/axzu9gcq/27/" target="_blank"># Asignar letra a numero</a>
         <br><br>
-        <a href="https://jsfiddle.net/bielplanasCEP/1tozu9df/12/"># Mostrar datos de objetos</a>
+        <a href="https://jsfiddle.net/bielplanasCEP/1tozu9df/12/" target="_blank"># Mostrar datos de objetos</a>
         <br><br>
-        <a href="https://jsfiddle.net/bielplanasCEP/sjn0qobz/35/"># Consultar precio</a>      
+        <a href="https://jsfiddle.net/bielplanasCEP/sjn0qobz/35/" target="_blank"># Consultar precio</a>      
     </section>
    <br><br>
     
