--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
   
   <body>   
    <br><br>
+    <HR style="border-color:orange;" width="40%" ;>
     <section>   
         <h1 style="color:orange;"># EJERCICIOS JSFiddle (DWEC)</h1>    
         <h3>FT-M06-CT1-P1.2: Gestió Documental i estàndards - (HTML / CSS / Un poco de JS)</h3>
@@ -18,6 +19,7 @@
         <br><br>
         <a href="https://jsfiddle.net/bielplanasCEP/sjn0qobz/35/" target="_blank"># Consultar precio</a>      
     </section>
+    <HR style="border-color:orange;" width="40%" ;>
    <br><br>
     
   </body>
