--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
         <h3>FT-M06-CT1-P1.2: Gestió Documental i estàndards - (HTML / CSS / Un poco de JS)</h3>
         <a href="https://jsfiddle.net/bielplanasCEP/qk9csao8/1/" target="_blank"># Saludo</a>
       
-        <h3>FT-M06-CT2-P2.1 (part 1): Estructures per emmagatzemar informació - (Estructures de dades simples/complexes)</h3>
+        <h3>M06_02_FT_01 - Estructures per emmagatzemar informació</h3>
         <a href="https://jsfiddle.net/bielplanasCEP/axzu9gcq/27/" target="_blank"># Asignar letra a numero</a>
         <br><br>
         <a href="https://jsfiddle.net/bielplanasCEP/1tozu9df/12/" target="_blank"># Mostrar datos de objetos</a>
