--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,15 +9,15 @@
     <HR style="border-color:orange;" width="40%" ;>
     <section>   
         <h1 style="color:orange;"># EJERCICIOS JSFiddle (DWEC)</h1>    
-        <h3>FT-M06-CT1-P1.2: Gestió Documental i estàndards - (HTML / CSS / Un poco de JS)</h3>
-        <a href="https://jsfiddle.net/bielplanasCEP/qk9csao8/1/" target="_blank"># Saludo</a>
+        <h3>M6_01_FT_01 - Gestió Documental i estàndards</h3>
+        <a href="https://jsfiddle.net/bielplanasCEP/qk9csao8/1/" target="_blank">&nbsp;# Saludo</a>
       
         <h3>M06_02_FT_01 - Estructures per emmagatzemar informació</h3>
-        <a href="https://jsfiddle.net/bielplanasCEP/axzu9gcq/27/" target="_blank"># Asignar letra a numero</a>
+        <a href="https://jsfiddle.net/bielplanasCEP/axzu9gcq/27/" target="_blank">&nbsp;# Asignar letra a numero</a>
         <br><br>
-        <a href="https://jsfiddle.net/bielplanasCEP/1tozu9df/12/" target="_blank"># Mostrar datos de objetos</a>
+        <a href="https://jsfiddle.net/bielplanasCEP/1tozu9df/12/" target="_blank">&nbsp;# Mostrar datos de objetos</a>
         <br><br>
-        <a href="https://jsfiddle.net/bielplanasCEP/sjn0qobz/35/" target="_blank"># Consultar precio</a>      
+        <a href="https://jsfiddle.net/bielplanasCEP/sjn0qobz/35/" target="_blank">&nbsp;# Consultar precio</a>      
     </section>
     <HR style="border-color:orange;" width="40%" ;>
    <br><br>
