--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,14 +9,14 @@
     <section>   
         <h1 style="color:orange;"># EJERCICIOS JSFiddle (DWEC)</h1>    
         <h3>M6_01_FT_01 - Gestió Documental i estàndards</h3>
-        <a href="https://jsfiddle.net/bielplanasCEP/qk9csao8/1/" target="_blank">&nbsp;# Saludo</a>
+        <a href="https://jsfiddle.net/bielplanasCEP/qk9csao8/1/" target="_blank">&nbsp;&nbsp;# Saludo</a>
       
         <h3>M06_02_FT_01 - Estructures per emmagatzemar informació</h3>
-        <a href="https://jsfiddle.net/bielplanasCEP/axzu9gcq/27/" target="_blank">&nbsp;# Asignar letra a numero</a>
+        <a href="https://jsfiddle.net/bielplanasCEP/axzu9gcq/27/" target="_blank">&nbsp;&nbsp;# Asignar letra a numero</a>
         <br><br>
-        <a href="https://jsfiddle.net/bielplanasCEP/1tozu9df/12/" target="_blank">&nbsp;# Mostrar datos de objetos</a>
+        <a href="https://jsfiddle.net/bielplanasCEP/1tozu9df/12/" target="_blank">&nbsp;&nbsp;# Mostrar datos de objetos</a>
         <br><br>
-        <a href="https://jsfiddle.net/bielplanasCEP/sjn0qobz/35/" target="_blank">&nbsp;# Consultar precio</a>      
+        <a href="https://jsfiddle.net/bielplanasCEP/sjn0qobz/35/" target="_blank">&nbsp;&nbsp;# Consultar precio</a>      
     </section>
    <br><br>
     
